# peal

./: .gitignore  README.md  pyproject.toml  setup.py
docs/source/: code.rst  conf.py  index.rst  introduction.rst
examples/: basic_optimisation.py  build_landscape.py  gp_process.py  strategy_process.py  strategy_testing.py  synchronous_process.py  visual_callbacks.py
peal/: __init__.py  breeding.py  community.py  fitness.py  genetics.py  gp.py  individual.py  population.py
peal/core/: __init__.py  callback.py  environment.py  integration.py  process.py  strategy.py
peal/environment/: __init__.py  base.py  population.py
peal/evaluation/: __init__.py  callback.py  fitness.py
peal/individual/: base.py
peal/operations/: __init__.py  config.py  integration.py  iteration.py  mutation.py  operator.py  reproduction.py  selection.py
peal/operations/mutation/: __init__.py  base.py  common.py  gp.py
peal/operations/reproduction/: __init__.py  base.py  common.py
peal/operations/selection/: __init__.py  base.py  common.py
peal/operators/: __init__.py  clash.py  integration.py  iteration.py  mutation.py  operator.py  reproduction.py  selection.py
peal/population/: __init__.py  breeder.py  breeding.py  individual.py  integration.py  population.py
tests/core/: test_callback.py
