[tool.poetry]
name = "peal"
version = "0.0.6"
description = "Python Package for Evolutionary Algorithms"
authors = ["alienkrieg <alienkrieg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
matplotlib = {version = "^3.5.1", optional = true}
Sphinx = {version = "^4.4.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pylint = "^2.12.2"
mypy = "^0.931"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
example-dependencies = ["matplotlib"]
docs = ["Sphinx", "sphinx-rtd-theme"]
